--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
-    <string name="app_name">My second</string>
-    <string name="toolbar" />
+    <string name="app_name">My second </string>
+    <string name="create_project">Create project</string>
+    <string name="create">Create</string>
+    <string name="input_create_project">Add a project title</string>
+    <string name="select_color">Select color</string>
 </resources>
