--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="create">Create</string>
     <string name="input_create_project">Add a project title</string>
     <string name="select_color">Select color</string>
+    <string name="notes_2">2 Notes</string>
 </resources>
