lesson 78 hw/ добавления return request, и ColorBottomSheet

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="input_create_project">Add a project title</string>
     <string name="select_color">Select color</string>
     <string name="notes_2">2 Notes</string>
+    <string name="colors">Colors</string>
 </resources>
